--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -78,6 +78,21 @@ jobs:
         run: terraform init
 
       - name: Terraform Refresh
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          TF_VAR_PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
+          TF_VAR_LOCATION: ${{ secrets.LOCATION }}
+          TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
+          TF_VAR_GITHUB_ORG: ${{ secrets.ORG }}
+          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ secrets.DOCS_BUILDER_REPO_NAME }}
+          TF_VAR_MANIFESTS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_SSH_PRIVATE_KEY }}
+          TF_VAR_MANIFESTS_REPO_NAME: ${{ secrets.MANIFESTS_REPO_NAME }}
+          TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
+          TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
+          TF_IN_AUTOMATION: true
         run: terraform refresh
 
       - name: terraform plan
