--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -93,6 +93,7 @@ jobs:
           TF_VAR_MANIFESTS_REPO_NAME: ${{ secrets.MANIFESTS_REPO_NAME }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
+          TF_VAR_LW_AGENT_TOKEN: ${{secrets.LW_AGENT_TOKEN}}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
