--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -203,6 +203,7 @@ jobs:
           TF_VAR_MANIFESTS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_SSH_PRIVATE_KEY }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
+          TF_VAR_LW_AGENT_TOKEN: ${{secrets.LW_AGENT_TOKEN}}
           TF_IN_AUTOMATION: true
         run: terraform apply -auto-approve tfplan
 
