fix: updated azure login

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -93,7 +93,9 @@ jobs:
           TF_VAR_MANIFESTS_REPO_NAME: ${{ secrets.MANIFESTS_REPO_NAME }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
-          TF_VAR_LW_AGENT_TOKEN: ${{secrets.LW_AGENT_TOKEN}}
+          TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -203,7 +205,9 @@ jobs:
           TF_VAR_MANIFESTS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_SSH_PRIVATE_KEY }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
-          TF_VAR_LW_AGENT_TOKEN: ${{secrets.LW_AGENT_TOKEN}}
+          TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: terraform apply -auto-approve tfplan
 
@@ -260,7 +264,9 @@ jobs:
           TF_VAR_MANIFESTS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_SSH_PRIVATE_KEY }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
-          TF_VAR_LW_AGENT_TOKEN: ${{secrets.LW_AGENT_TOKEN}}
+          TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
