fix: updated azure login

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -94,8 +94,8 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
-          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -206,8 +206,8 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
-          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: terraform apply -auto-approve tfplan
 
@@ -265,8 +265,8 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ secrets.ENVIRONMENT_GRADE }}
-          TF_VAR_GPU_NODE_POOL: ${{ secrets.GPU_NODE_POOL }}
+          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
