feat: seaprate manifests repos

--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -77,6 +77,9 @@ config system firewall address
   edit "hub-nva-external-vip"
     set ip-address-value ${VAR-hub-nva-vip}
   next
+  edit "hub-nva-external-ai-vip"
+    set ip-address-value ${VAR-hub-nva-ai-vip}
+  next
   edit "kubernetes_nodes"
     set type ip-netmask
     set ip-netmask ${VAR-spoke-aks-network}
@@ -141,13 +144,27 @@ config system firewall firewall-policy
       set action accept
     next
     edit 6
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-ai-vip
+      set service http
+      set action accept
+    next
+    edit 7
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-ai-vip
+      set service https
+      set action accept
+    next
+    edit 8
       set out-interface port2
       set src-address internet
       set dest-address spoke-aks-node-ip
       set service ollama-port
       set action accept
     next
-    edit 7
+    edit 9
       set in-interface port1
       set out-interface port2
       set src-address internet
@@ -155,7 +172,7 @@ config system firewall firewall-policy
       set service ollama-port
       set action accept
     next
-    edit 8
+    edit 10
       set in-interface port2
       set out-interface port1
       set src-address kubernetes_nodes
