feat: seaprate manifests repos

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -96,7 +96,7 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_PRODUCTION_ENVIRONMENT: ${{ vars.PRODUCTION_ENVIRONMENT }}
           TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_VAR_APPLICATION_DOCS: ${{ vars.APPLICATION_DOCS }}
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
@@ -214,7 +214,7 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_PRODUCTION_ENVIRONMENT: ${{ vars.PRODUCTION_ENVIRONMENT }}
           TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_VAR_APPLICATION_DOCS: ${{ vars.APPLICATION_DOCS }}
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
@@ -279,7 +279,7 @@ jobs:
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
-          TF_VAR_ENVIRONMENT_GRADE: ${{ vars.ENVIRONMENT_GRADE }}
+          TF_VAR_PRODUCTION_ENVIRONMENT: ${{ vars.PRODUCTION_ENVIRONMENT }}
           TF_VAR_GPU_NODE_POOL: ${{ vars.GPU_NODE_POOL }}
           TF_VAR_APPLICATION_DOCS: ${{ vars.APPLICATION_DOCS }}
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
