--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -71,14 +71,17 @@ config system firewall address
   edit "internet"
     set type ip-netmask
   next
-  edit "spoke-check-internet-up-ip"
-    set ip-address-value ${VAR-spoke-check-internet-up-ip}
+  edit "hub-nva-external-dvwa-vip"
+    set ip-address-value ${VAR-hub-nva-vip-dvwa}
   next
-  edit "hub-nva-external-vip"
-    set ip-address-value ${VAR-hub-nva-vip}
+  edit "hub-nva-external-video-vip"
+    set ip-address-value ${VAR-hub-nva-vip-video}
   next
-  edit "hub-nva-external-ai-vip"
-    set ip-address-value ${VAR-hub-nva-ai-vip}
+  edit "hub-nva-external-docs-vip"
+    set ip-address-value ${VAR-hub-nva-vip-docs}
+  next
+  edit "hub-nva-external-ollama-vip"
+    set ip-address-value ${VAR-hub-nva-vip-ollama}
   next
   edit "kubernetes_nodes"
     set type ip-netmask
@@ -132,39 +135,68 @@ config system firewall firewall-policy
     edit 4
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-vip
+      set dest-address hub-nva-external-docs-vip
       set service http
       set action accept
     next
     edit 5
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-vip
+      set dest-address hub-nva-external-docs-vip
       set service https
       set action accept
     next
     edit 6
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-ai-vip
+      set dest-address hub-nva-external-ollama-vip
       set service http
       set action accept
     next
     edit 7
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-ai-vip
+      set dest-address hub-nva-external-ollama-vip
       set service https
       set action accept
     next
     edit 8
+    edit 9
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-video-vip
+      set service http
+      set action accept
+    next
+    edit 10
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-video-vip
+      set service https
+      set action accept
+    next
+    edit 11
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-dvwa-vip
+      set service http
+      set action accept
+    next
+    edit 12
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-external-dvwa-vip
+      set service https
+      set action accept
+    next
+    edit 13
       set out-interface port2
       set src-address internet
       set dest-address spoke-aks-node-ip
       set service ollama-port
       set action accept
     next
-    edit 9
+    edit 14
       set in-interface port1
       set out-interface port2
       set src-address internet
@@ -172,7 +204,7 @@ config system firewall firewall-policy
       set service ollama-port
       set action accept
     next
-    edit 10
+    edit 15
       set in-interface port2
       set out-interface port1
       set src-address kubernetes_nodes
