--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -71,16 +71,16 @@ config system firewall address
   edit "internet"
     set type ip-netmask
   next
-  edit "hub-nva-external-dvwa-vip"
+  edit "hub-nva-vip-dvwa"
     set ip-address-value ${VAR-hub-nva-vip-dvwa}
   next
-  edit "hub-nva-external-video-vip"
+  edit "hub-nva-vip-video"
     set ip-address-value ${VAR-hub-nva-vip-video}
   next
-  edit "hub-nva-external-docs-vip"
+  edit "hub-nva-vip-docs"
     set ip-address-value ${VAR-hub-nva-vip-docs}
   next
-  edit "hub-nva-external-ollama-vip"
+  edit "hub-nva-vip-ollama"
     set ip-address-value ${VAR-hub-nva-vip-ollama}
   next
   edit "kubernetes_nodes"
@@ -135,61 +135,68 @@ config system firewall firewall-policy
     edit 4
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-docs-vip
+      set dest-address hub-nva-vip-docs
       set service http
       set action accept
     next
     edit 5
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-docs-vip
+      set dest-address hub-nva-vip-docs
       set service https
       set action accept
     next
     edit 6
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-ollama-vip
+      set dest-address hub-nva-vip-dvwa
       set service http
       set action accept
     next
     edit 7
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-ollama-vip
+      set dest-address hub-nva-vip-dvwa
       set service https
       set action accept
     next
     edit 8
+      set in-interface port1
+      set src-address internet
+      set dest-address hub-nva-vip-ollama
+      set service http
+      set action accept
+    next
     edit 9
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-video-vip
-      set service http
+      set dest-address hub-nva-vip-ollama
+      set service https
       set action accept
     next
     edit 10
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-video-vip
-      set service https
+      set dest-address hub-nva-vip-video
+      set service http
       set action accept
     next
     edit 11
       set in-interface port1
       set src-address internet
-      set dest-address hub-nva-external-dvwa-vip
-      set service http
-      set action accept
-    next
-    edit 12
-      set in-interface port1
-      set src-address internet
-      set dest-address hub-nva-external-dvwa-vip
+      set dest-address hub-nva-vip-video
       set service https
       set action accept
     next
+    edit 12
+      set out-interface port2
+      set src-address internet
+      set dest-address spoke-aks-node-ip
+      set service ollama-port
+      set action accept
+    next
     edit 13
+      set in-interface port1
       set out-interface port2
       set src-address internet
       set dest-address spoke-aks-node-ip
@@ -197,14 +204,6 @@ config system firewall firewall-policy
       set action accept
     next
     edit 14
-      set in-interface port1
-      set out-interface port2
-      set src-address internet
-      set dest-address spoke-aks-node-ip
-      set service ollama-port
-      set action accept
-    next
-    edit 15
       set in-interface port2
       set out-interface port1
       set src-address kubernetes_nodes
