feat: seaprate manifests repos

--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -218,7 +218,7 @@ config system firewall snat-policy
     set source-start ${VAR-spoke-virtual-network_subnet}
     set source-end ${VAR-spoke-virtual-network_netmask}
     set out-interface port1
-    set trans-to-ip ${VAR-hub-nva-vip}
+    set trans-to-ip ${VAR-hub-nva-vip-docs}
   next
 end
 config system feature-visibility
