feat: seaprate manifests repos

--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -229,6 +229,10 @@ config system certificate local
     set passwd ENC m8eWJTISWrN/JBB9KSp7kOFMNoo=
   next
 end
+execute formatlogdisk 
+
+
+
 ',
 "HaAzureInit":"disable"
 }
