feat: seaprate manifests repos

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -221,7 +221,7 @@ jobs:
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
           TF_IN_AUTOMATION: true
-          GH_TOKEN: ${{ github.PAT }}
+          GH_TOKEN: ${{ secrets.PAT }}
         run: terraform apply -auto-approve tfplan
 
   destroy:
