--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -46,7 +46,7 @@ jobs:
     needs: [terraform]
     if: needs.terraform.outputs.action == 'apply'
     name: Terraform Plan
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       ARM_SKIP_PROVIDER_REGISTRATION: true
     outputs:
@@ -228,7 +228,7 @@ jobs:
     name: Terraform Destroy
     needs: [terraform]
     if: needs.terraform.outputs.action == 'destroy'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Github repository checkout
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871
