feat: seaprate manifests repos

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -105,7 +105,7 @@ jobs:
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
-          terraform plan -refresh=false -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+          terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
           echo "exitcode=$exitcode" >> "$GITHUB_OUTPUT"
           if [ $exitcode -eq 1 ]; then
             echo Terraform Plan Failed!
