--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -102,6 +102,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
+          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -220,6 +221,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
+          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
           TF_IN_AUTOMATION: true
           GH_TOKEN: ${{ secrets.PAT }}
         run: terraform apply -auto-approve tfplan
@@ -279,6 +281,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
+          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
