feat: separate manifests repos

--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -84,15 +84,15 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
-          TF_VAR_LOCATION: ${{ secrets.LOCATION }}
+          TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
+          TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
-          TF_VAR_GITHUB_ORG: ${{ secrets.ORG }}
-          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ secrets.DOCS_BUILDER_REPO_NAME }}
+          TF_VAR_GITHUB_ORG: ${{ vars.ORG }}
+          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ vars.DOCS_BUILDER_REPO_NAME }}
           TF_VAR_MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY }}
-          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ secrets.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
+          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ vars.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
           TF_VAR_MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY }}
-          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ secrets.MANIFESTS_APPLICATIONS_REPO_NAME }}
+          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ vars.MANIFESTS_APPLICATIONS_REPO_NAME }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
@@ -205,15 +205,15 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          TF_VAR_PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
-          TF_VAR_LOCATION: ${{ secrets.LOCATION }}
+          TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
+          TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
-          TF_VAR_GITHUB_ORG: ${{ secrets.ORG }}
-          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ secrets.DOCS_BUILDER_REPO_NAME }}
-          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ secrets.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
+          TF_VAR_GITHUB_ORG: ${{ vars.ORG }}
+          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ vars.DOCS_BUILDER_REPO_NAME }}
+          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ vars.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
           TF_VAR_MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY }}
           TF_VAR_MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY }}
-          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ secrets.MANIFESTS_APPLICATIONS_REPO_NAME }}
+          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ vars.MANIFESTS_APPLICATIONS_REPO_NAME }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
@@ -267,15 +267,15 @@ jobs:
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_PROJECT_NAME: ${{ secrets.PROJECT_NAME }}
-          TF_VAR_LOCATION: ${{ secrets.LOCATION }}
+          TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
+          TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
-          TF_VAR_GITHUB_ORG: ${{ secrets.ORG }}
-          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ secrets.DOCS_BUILDER_REPO_NAME }}
-          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ secrets.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
+          TF_VAR_GITHUB_ORG: ${{ vars.ORG }}
+          TF_VAR_DOCS_BUILDER_REPO_NAME: ${{ vars.DOCS_BUILDER_REPO_NAME }}
+          TF_VAR_MANIFESTS_INFRASTRUCTURE_REPO_NAME: ${{ vars.MANIFESTS_INFRASTRUCTURE_REPO_NAME }}
           TF_VAR_MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_INFRASTRUCTURE_SSH_PRIVATE_KEY }}
           TF_VAR_MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY: ${{ secrets.MANIFESTS_APPLICATIONS_SSH_PRIVATE_KEY }}
-          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ secrets.MANIFESTS_APPLICATIONS_REPO_NAME }}
+          TF_VAR_MANIFESTS_APPLICATIONS_REPO_NAME: ${{ vars.MANIFESTS_APPLICATIONS_REPO_NAME }}
           TF_VAR_HUB_NVA_PASSWORD: ${{ secrets.HUB_NVA_PASSWORD }}
           TF_VAR_HUB_NVA_USERNAME: ${{ secrets.HUB_NVA_USERNAME }}
           TF_VAR_LW_AGENT_TOKEN: ${{ secrets.LW_AGENT_TOKEN }}
