--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -102,7 +102,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
-          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
+          TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_IN_AUTOMATION: true
@@ -223,7 +223,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
-          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
+          TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_IN_AUTOMATION: true
@@ -285,7 +285,7 @@ jobs:
           TF_VAR_APPLICATION_OLLAMA: ${{ vars.APPLICATION_OLLAMA }}
           TF_VAR_APPLICATION_DVWA: ${{ vars.APPLICATION_DVWA }}
           TF_VAR_APPLICATION_VIDEO: ${{ vars.APPLICATION_VIDEO }}
-          TF_VAR_MANAGEMENT_ACCESS: ${{ vars.MANAGEMENT_ACCESS }}
+          TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_IN_AUTOMATION: true
