--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -105,6 +105,8 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_GODADDY_API_KEY: ${{ secrets.GODADDY_API_KEY }}
+          TF_VAR_GODADDY_SECRET_KEY: ${{ secrets.GODADDY_SECRET_KEY }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -226,6 +228,8 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_GODADDY_API_KEY: ${{ secrets.GODADDY_API_KEY }}
+          TF_VAR_GODADDY_SECRET_KEY: ${{ secrets.GODADDY_SECRET_KEY }}
           TF_IN_AUTOMATION: true
           GH_TOKEN: ${{ secrets.PAT }}
         run: terraform apply -auto-approve tfplan
@@ -288,6 +292,8 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_GODADDY_API_KEY: ${{ secrets.GODADDY_API_KEY }}
+          TF_VAR_GODADDY_SECRET_KEY: ${{ secrets.GODADDY_SECRET_KEY }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
