--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -105,6 +105,7 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -226,6 +227,7 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
           TF_IN_AUTOMATION: true
           GH_TOKEN: ${{ secrets.PAT }}
         run: terraform apply -auto-approve tfplan
@@ -288,6 +290,7 @@ jobs:
           TF_VAR_MANAGEMENT_PUBLIC_IP: ${{ vars.MANAGEMENT_PUBLIC_IP }}
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
+          TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
