--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -84,6 +84,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
           TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
@@ -206,6 +207,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
           TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
@@ -269,6 +271,7 @@ jobs:
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_PROJECT_NAME: ${{ vars.PROJECT_NAME }}
           TF_VAR_LOCATION: ${{ vars.LOCATION }}
           TF_VAR_GITHUB_TOKEN: ${{ secrets.PAT }}
