--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -107,6 +107,8 @@ jobs:
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
+          TF_VAR_OWNER_EMAIL: ${{ secrets.OWNER_EMAIL }}
+          TF_VAR_NAME: ${{ vars.NAME }}
           TF_IN_AUTOMATION: true
         run: |
           export exitcode=0
@@ -230,6 +232,8 @@ jobs:
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
+          TF_VAR_OWNER_EMAIL: ${{ secrets.OWNER_EMAIL }}
+          TF_VAR_NAME: ${{ vars.NAME }}
           TF_IN_AUTOMATION: true
           GH_TOKEN: ${{ secrets.PAT }}
         run: terraform apply -auto-approve tfplan
@@ -294,6 +298,8 @@ jobs:
           TF_VAR_HTUSERNAME: ${{ secrets.HTUSERNAME }}
           TF_VAR_HTPASSWD: ${{ secrets.HTPASSWD }}
           TF_VAR_DNS_ZONE: ${{ vars.DNS_ZONE }}
+          TF_VAR_OWNER_EMAIL: ${{ secrets.OWNER_EMAIL }}
+          TF_VAR_NAME: ${{ vars.NAME }}
           TF_IN_AUTOMATION: true
         run: |
           terraform destroy -auto-approve
