--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -1,6 +1,9 @@
 {
 "cloud-initd":"enable",
 "usr-cli":'
+config system global
+  set admin-sport 443
+end
 config system settings
   set enable-file-upload enable
 end
