--- a/cloud-init/fortiweb.conf
+++ b/cloud-init/fortiweb.conf
@@ -2,7 +2,7 @@
 "cloud-initd":"enable",
 "usr-cli":'
 config system global
-  set admin-sport 443
+  set admin-sport ${VAR-config-system-global-admin-sport}
 end
 config system settings
   set enable-file-upload enable
