--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -21,7 +21,7 @@ concurrency:
 jobs:
   terraform:
     name: Terraform Init
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       action: ${{ steps.terraform.outputs.action }}
     steps:
@@ -46,7 +46,7 @@ jobs:
     needs: [terraform]
     if: needs.terraform.outputs.action == 'apply'
     name: Terraform Plan
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     env:
       ARM_SKIP_PROVIDER_REGISTRATION: true
     outputs:
@@ -170,7 +170,7 @@ jobs:
   apply:
     name: Terraform Apply
     if: needs.terraform.outputs.action == 'apply'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: [terraform, plan]
     steps:
       - name: Github repository checkout
@@ -272,7 +272,7 @@ jobs:
     name: Terraform Destroy
     needs: [terraform]
     if: needs.terraform.outputs.action == 'destroy'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Github repository checkout
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871
